# imgui-customs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: demo_manager.cpp  demo_manager.h  demo_manager_init.cpp  demo_module.h  easing.h  helpModule.h  imguiDockEnforcer.cpp  imguiDockEnforcer.h  imgui_config.h  main.cpp
src/alignment/: alignmentDemo.h  imguiAlignment.h  imguiAlignment_noStore.h
src/animatedText/: animTextDemo.h  imguiAnimText.h
src/asciiart/: asciiArtDemo.h  imguiASCIIArt.h
src/bcf-lib/: BCFDoc.cpp  BCFDoc.h  BCFDocument.hpp  BCFDocumentStore.cpp  BCFDocumentStore.hpp  BCFIO.cpp  BCFIO.h  TestSchemas.hpp  UUIDGenerator.cpp  UUIDGenerator.h  bcfDemo.cpp  bcfDemo.h
src/bcf-lib/test files/: test_note.xml  test_note.xsd
src/bcf-lib/xmllib/: XMLDocumentHandle.cpp  XMLDocumentHandle.h  XMLMain.cpp  XMLMain.hpp  XMLNodeHandle.cpp  XMLNodeHandle.h  XMLParser.cpp  XMLParser.h  XMLSchema.hpp  XMLUtils.hpp  schemaValidator.cpp  schemaValidator.h
src/customText/: animTextDemo.h  customTextDemo.h  imguiAnimText.h  imguiTextFormats.h
src/dockEnforcer/: dockEnforcerDemo.h  imguiDockEnforcer.h
src/fonts/: sourceSans3_regular.h
src/groupHierarchy/: grpHierarchyDemo.h  imguiGrpHierarchy.cpp  imguiGrpHierarchy.h
src/imageViewer/: imageViewerDemo.h  imguiImage.cpp  imguiImage.h
src/imguiCustoms_include/: imguiCustoms.h
src/imguiCustoms_include/inc/: asciiCatAnim.h  imguiASCIIArt.h  imguiAlignment.h  imguiAnimatedASCIIArt.h  imguiCustomTooltip.h  imguiDockEnforcer.h  imguiLMP.h  imguiMultiToggle.h  imguiSpinner.h  imguiToggle.h  imguiTween.h
src/localModal/: localModalDemo.h
src/multiToggle/: imguiMultiToggle.h  multiToggleDemo.h
src/popupstack/: PopupManager.cpp  PopupManager.h  PopupPresets.h  PopupStack.cpp  PopupStack.h  popupStackDemo.h
src/progressBar/: imguiProgressBar.h  progressBarDemo.h
src/spinner/: spinnerDemo.h
src/toggle/: imguiToggle.h  toggleDemo.h
src/tooltip/: customTooltipDemo.h  imguiCustomTooltip.h
src/tween/: imguiTween.h  tweenDemo.h
src/windowStore/: imguiWindowStore.h  windowStoreDemo.h
